remove image flicker bug

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -80,7 +80,6 @@ a:hover {
 }
 
 .card .front {
-    display: none;
     width: 100%;
     height: 100%;
     position: absolute;
@@ -88,11 +87,11 @@ a:hover {
     background-position: center;
     background-size: contain;
     box-shadow: 0px 0px 10px rgba(255, 255, 255, 0.3);
+    z-index: 0;
 }
 
 .card .back {
     background-color: white;
-    display: block;
     width: 100%;
     height: 100%;
     position: absolute;
@@ -101,6 +100,7 @@ a:hover {
     align-items: center;
     justify-content: center;
     box-shadow: 0px 0px 10px rgba(255, 255, 255, 0.3);
+    z-index: 1;
 }
 
 .back::before {
@@ -114,7 +114,7 @@ a:hover {
 /* card animation */
 
 .card.turned {
-    animation: turn-around 250ms ease-in;
+    animation: turn-around 250ms linear;
 }
 
 @keyframes turn-around {
